beginning to work on fixing reset button functionality and spacing

--- a/client/src/games/rps/components/Score.css
+++ b/client/src/games/rps/components/Score.css
@@ -1,7 +1,6 @@
 #score {
     margin: auto;
-    
-    
+    margin-top: 8rem;
     text-align: center;
     color: teal;
   }
